# Data-Airflow-Server

./: .coverage  .env  .env.dev  .env.prod  .env.test  .gitignore  .rsync-exclude  LICENSE  README.md  fastapi_monitor.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  restart_airflow_service.sh  sync_to_server.sh  tkinter_monitor.py
config/: base_resources.yaml  customer_onboarding_demo.yaml  defaults.yaml  env_config_production_demo.yaml  resources_demo.yaml
config/env/: dev.yaml  prod.yaml
config/envs/: dev_resources.yaml  prod_resources.yaml
config/workflows/: ingest_pipeline.yaml  onboarding_demo.yaml
dags/: dag_factory.py  factory.py  generic_loader_demo.py  loader_factory_demo.py  outbox_relay_worker.py
dags/configs/: example_ingest_pipeline.yaml  example_ingest_pipeline_file.yaml  example_ingest_pipeline_postgres.yaml
dags/manifests/: README.md  example_ingest_pipeline.json  (+1 more)
demo_storage/: demo_run.json
doc_dev/: proj_tree.md  pull_grok_changes_in_pycharm.md  setup_instructions.md
doc_prod/: command_list.md
docs/: architecture.md  command_list.md  development.md  development_daily.md  environment.md  production_admin.md  production_install.md  production_operations.md  production_setup.md  proj_info.md  project_info.md  project_tree.md  pytest_instructions.md  setup_instructions.md  testing.md
scripts/: build_manefest_demo.py  build_manifest.py  build_manifest_demo2.py  grook_feedback_bot.py
scripts_dev/: .rsync_exclude  sync_to_server.sh
tests/: conftest.py  test_factory.py  test_ingest_pipeline.py
(+83 files in other folders)
